Fixed instance metadata access vulnerability

--- a/src/sxc.yaml
+++ b/src/sxc.yaml
@@ -60,7 +60,11 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -xe
-          instance_id=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
+
+          token=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
+          instance_id=$(curl -H "X-aws-ec2-metadata-token: $token" -v http://169.254.169.254/latest/meta-data/instance-id)
+
+          echo '- Updating package list'
           apt update
 
           echo '- Installing AWS tools'
